		Individual Needs: new interface for parents to view individual education plans for their children (off by default)
		Messenger: added Canned Response functionality for defining commonly sent messages.
		School Admin: changed "Spaces" to "Facilities" and integrated borrowable Library items into Booking (to support laptop carts)
		User Admin: added bulk import of user photos from a zip file
		
	Security
		System: converted links to GNU GPL to HTTPS
		System: converted links to Gibbon website to HTTPS
	
	Tweaks & Bug Fixes
		System: Added Danish, Persian, Brazilian Portugese, Dutch & Georgian as development languages
		System: improved MIME type checking on CSV import
		System: fixed Google login PHP warnings
		System: fixed login PHP warning
		System: fixed typo in name of behaviour CLI script
		System: fixed non-standard port bug in installer (caused incorrect value to be set for absoluteURL)
		System: added Pakistani Rupee (₨) and Jamaican Dollar as currenciess
		System: added a password generator to new password setting fields
		System: updated jquery autosize library, to fix Chrome's disappearing textareas
		System Admin: Improved version comparison in module updater
		System Admin: Improved version comparison in non-login database updater
		Activities: fixed error in adding and editing activities when payment is turned off
		Attendance: added client side warning in case attendance is taken for a day in the past (happens when user not logged out over night)
		Attendance: added ability to see date range in Form Groups Not Registered 
		Behaviour: made column widths consistent when viewing behaviour log
		Behaviour: increased min-width for Action column
		Behaviour: fixed <? bug
		Departments: fixed filter in Homework link from Class view page
		Finance: fixed <? bug
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Formal Assessment: fixed uploaded response file selector gigantism issue